# myproject

./: .coze  .docker.env.example  .env.example  .gitignore  AGENTS.md  BUILD_VERIFICATION.md  COMPLETE_DOCS.md  COZE_FORMAT.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_ENV_CHECK.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_FIX_20260225.md  DEPLOY_FIX_20260225_V2.md  DEPLOY_FIX_FINAL.md  FIX_SUMMARY.md  GIT_SETUP.md  MANIFEST.md  NATIVE_DEPLOYMENT_GUIDE.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PROJECT_OVERVIEW.md  PUSH_TO_GITHUB.md  QUICKSTART.md  QUICK_START.md  README.md  REQUIREMENTS.md  SECURE_DEPLOYMENT_GUIDE.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIX_SUMMARY.md  SKILL.md  TROUBLESHOOTING.md  VERCEL_DEPLOYMENT.md  (+16 more)
ai-creative-hub/backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
ai-creative-hub/backend/alembic/: env.py
ai-creative-hub/backend/app/: config.py  database.py  dependencies.py  main.py
ai-creative-hub/backend/app/api/: websocket.py
ai-creative-hub/backend/app/api/v1/: __init__.py  auth.py  image.py  music.py  prompt.py  router.py  video.py  voice.py  workflow.py
ai-creative-hub/backend/app/core/ai_router/: __init__.py  base.py  config.py  fallback.py  retry.py  validator.py
ai-creative-hub/backend/app/core/providers/: __init__.py  (+6 more)
ai-creative-hub/backend/app/models/: __init__.py
ai-creative-hub/backend/app/schemas/: __init__.py
ai-creative-hub/backend/app/utils/: __init__.py  auth.py
(+203 files in other folders)
